feat: add seed
