# openapi/docs/api.yaml
@@ -182,9 +182,9 @@ components:
         userId:
           type: integer
           example: 1
-        amount:
-          type: number
-          example: 100
+        amountCents:
+          type: string
+          example: "10000"
         createdAt:
           type: string
           format: date-time
@@ -197,4 +197,4 @@ components:
           example: "2021-01-01T00:00:00Z"
       required:
         - userId
-        - amount
+        - amountCents
